Closed Bug 209990 Opened 22 years ago Closed 22 years ago

Crash in accessibility when doc is destroyed

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

Details

(Keywords: access, Whiteboard: in-process-accessibility)

Attachments

(1 file, 1 obsolete file)

This is a regresion from bug 202080, where we introduced the new thashtable. When the doc is destroyed, we end up trying to access a null hash table.
oops should be assigned to me
Assignee: kyle.yuan → aaronl
I need to test to make sure this still doesn't leak
Attachment #126110 - Flags: review?(kyle.yuan)
Comment on attachment 126110 [details] [diff] [review] Remove unneccessary null setters in InvalidateChildren(), make mParent an nsCOMPtr, fix hash table destruction r=kyle
Attachment #126110 - Flags: review?(kyle.yuan) → review+
Comment on attachment 126110 [details] [diff] [review] Remove unneccessary null setters in InvalidateChildren(), make mParent an nsCOMPtr, fix hash table destruction I tested, changing mParent to an nsCOMPtr doesn't cause any leaks.
Attachment #126110 - Flags: superreview?(alecf)
Comment on attachment 126110 [details] [diff] [review] Remove unneccessary null setters in InvalidateChildren(), make mParent an nsCOMPtr, fix hash table destruction sr=alecf
Attachment #126110 - Flags: superreview?(alecf) → superreview+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Whiteboard: in-process-accessibility
Comment on attachment 126110 [details] [diff] [review] Remove unneccessary null setters in InvalidateChildren(), make mParent an nsCOMPtr, fix hash table destruction For making the accessibility feature work better and more stable in 1.4.x, we need to get this patch in. This fix has been in trunk for a long period. It won't affect other modules.
Attachment #126110 - Flags: approval1.4.x?
Comment on attachment 126110 [details] [diff] [review] Remove unneccessary null setters in InvalidateChildren(), make mParent an nsCOMPtr, fix hash table destruction This is not going to make 1.4.1. Please re-request aproval after 1.4.1 ships if you'd like to get this in for 1.4.2. Kyle, can you all take this into your tree locally until after 1.4.1 ships (real soon now) and then work with us to get it landed first thing for 1.4.2?
Attachment #126110 - Flags: approval1.4.x? → approval1.4.x-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: