Bug 209990. Crash when accessibility doc is destroyed, or on shutdown. r=kyle, sr=alecf